Update dockerization process to production build

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jaeinbaek.github.io/woodoku/",
+  "homepage": ".",
   "name": "woodoku",
   "version": "0.1.0",
   "private": true,
